# serverless-fastapi-app

./: .gitignore  pyproject.toml
.github/workflows/: ci-tests.yml
backend/: samconfig.toml  template.yaml
backend/app/: db.py  main.py  schemas.py
backend/app/routers/: items.py
backend/tests/: conftest.py
backend/tests/unit/: test_items_endpoints.py  test_main_endpoints.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: script.js
